# Moeglich-Dev-Web

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  components.json  deno.d.ts  munkres-js.d.ts  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.cjs  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
prisma/: schema.prisma
src/: env.js  env.mjs
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/_components/: Layout.tsx  footer.tsx  header.tsx  i18.tsx  not_found_page.tsx  search_bar.tsx  technologies.tsx  three_background.tsx  tlink.tsx  top_animation.tsx
src/app/contact/: form.tsx  page.tsx
src/app/ex/: page.tsx
src/app/glsltest/: _page.tsx  page.tsx
src/app/glsltest2/: _page.tsx  page.tsx
src/app/leaderboard_waffle/: page.tsx
src/app/overview/: page.tsx
src/code/: bundle.ts  constants.ts  merge_code.ts  wdyr.ts
src/data/: projects.ts  projects.tsx  tech.tsx  tlink.tsx
src/pages/: _app.tsx  ctest.tsx  ex.tsx  index.tsx  leaderboard_waffle.tsx  present.tsx  ref.txt  t.tsx
src/routes/: __layout.svelte  index.svelte
src/server/: auth.ts  db.ts  pusher_server.ts
src/styles/: globals.css
src/trpc/: react.tsx  server.ts  shared.ts
src/utils/: array_map.ts  cross_text.tsx  datacomp.ts  dedent.ts  interpolate.ts  interpolate_between.ts  lerp.ts  linget.ts  maybe_window.ts  seeded_random.ts  split_include.ts  spring.ts  text_size.ts  use_async_value.ts  use_custom_destroy.ts  use_lifecycle.ts  use_persist.ts  use_reset.ts  use_simulation.ts  use_update.ts
(+176 files in other folders)
