[package]
name = "moeglichdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
walkdir = "2.3.3"


[profile.release]
opt-level = 1
debug = false
codegen-units = 16
lto = false
incremental = true

[registries.crates-io]
protocol = "sparse"